import "dccl/protobuf/option_extensions.proto";

message CTDSample
{
    option (dccl.msg).id = 127;
    option (dccl.msg).max_bytes = 32;
    option (dccl.msg).codec_version = 3;
    
    optional double salinity = 1 [(dccl.field) = { min: 0 max: 40 precision: 1}];
    optional double temperature = 2 [(dccl.field) = { min: 3 max: 30 precision: 1}];
    optional double depth = 3 [(dccl.field) = { min: 0 max: 5000 }];
}


message TempSample
{
    optional double temperature = 1;
}
